mercurial evolve extension

--- a/roles/mercurial/templates/hgrc.j2
+++ b/roles/mercurial/templates/hgrc.j2
@@ -27,7 +27,7 @@ hgext.histedit =
 color =
 churn =
 # debugshell = $HOME/lib/mercurial-main/contrib/debugshell.py
-# evolve = $HOME/lib/hg-evolve/hgext/evolve.py
+evolve =
 hggit = /usr/lib64/python2.7/site-packages/hggit
 hgsubversion = /usr/lib64/python2.7/site-packages/hgsubversion
 subvertpy = /usr/lib64/python2.7/site-packages/subvertpy
