correct snippet path

--- a/roles/vim/templates/vimrc.j2
+++ b/roles/vim/templates/vimrc.j2
@@ -104,7 +104,7 @@ let g:UltiSnipsListSnippets=",l"
 let g:UltiSnipsJumpForwardTrigger=",f"
 let g:UltiSnipsJumpBackwardTrigger=",b"
 let g:UltiSnipsEditSplit = "horizontal"
-let g:UltiSnipsSnippetDirectories = ["UltiSnips", "snipps"]
+let g:UltiSnipsSnippetDirectories = ["/etc/vim/snipps"]
 
 
 " Syntastic setup - static syntax checking
